# cakescript

./: .gitignore  CMakeLists.txt  README.md
include/: context.h  lexer.h  object.h  utils.h
include/basic/: tmp_ptr.h
include/lib/: io.h  math.h
include/nrt/: README.md  instr.h  object.h
include/opt/: llvm_ir_gen.h
include/parser/: ast_node.h  bin_op.h  decl.h  expr.h  function.h  loop_branch.h  parser.h  symbol.h
include/runtime/: callable_object.h  intern_function.h  mem.h  memory.h  object.h
src/: context.cpp  lexer.cpp  main.cpp  object.cpp  utils.cpp
src/lib/: io.cpp  math.cpp
src/nrt/: object.cpp
src/parser/: bin_op.cpp  decl.cpp  expr.cpp  function.cpp  loop_branch.cpp  parser.cpp  symbol.cpp
src/runtime/: callable_object.cpp  intern_function.cpp  mem.cpp  object.cpp
test/: CMakeLists.txt  lexer_test.cpp  utils.cpp  utils.h
test/data/basic/: array1.js  expr1.js  object1.js  object2.js
test/data/function/: case1.js
test/data/regression/: eightQueen.js
test/nrt/: string_test.cpp
test/parser/: decl_test.cpp  expr_test.cpp  loop_branch_test.cpp
test/runtime/: array_test.cpp  expr_runtest.cpp  func_test.cpp  obj_test2.cpp  object_test.cpp
